Recette : fix flip card overflow iOS and jerky flip Issue #117

--- a/src/app/pages/player/contents/simple-question/simple-question.component.scss
+++ b/src/app/pages/player/contents/simple-question/simple-question.component.scss
@@ -14,14 +14,12 @@
     transition: 0.6s;
     transform-style: preserve-3d;
     animation: flashflip 0.05s;
+    will-change: transform;
 
     .front, .back {
       display: flex;
-      position: absolute;
-      top:0;
-      left:0;
-      bottom:0;
-      right:0;
+      width: 100%;
+      flex: 0 0 auto;
       backface-visibility: hidden;
     }
 
@@ -31,6 +29,7 @@
 
     .back {
       transform: rotate3d(0, -1, 0, 180deg);
+      margin-left: -100%;
     }
   }
 }
